Add navbar.html and base.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,6 @@
-hello
+{% extends 'base.html'%}
+
+{% block content %}
+    <h2>welcome</h2>
+    <button class="btn btn-success btn-sm">hello</button>
+{% endblock%}
