--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -5,14 +5,13 @@
     </button>
     <div class="collapse navbar-collapse" >
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle"  data-toggle="dropdown"aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user"></i> Profile </a>
-                <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                    <a class="dropdown-item" href="#">My account</a>
-                    <a class="dropdown-item" href="#">Log out</a>
-                </div>
-            </li>
+            {% if current_user.is_authenticated %}
+            <li style="color:white;padding:15px;"><i class="fas fa-user">{{current_user.username}}</i></li>
+            <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+            {% else %}
+            <li style="color:white;padding:10px;text-decoration:none;margin-right:20px;"><a href="{{url_for('auth.login')}}"><i class="fas fa-user"> Log in</i></a></li>
+            {%endif%}
+
         </ul>
     </div>
 </nav>
