--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,10 +6,19 @@
     <div class="collapse navbar-collapse" >
         <ul class="navbar-nav ml-auto">
             {% if current_user.is_authenticated %}
-            <li style="color:white;padding:15px;"><i class="fas fa-user">{{current_user.username}}</i></li>
-            <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+            <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" style= 'margin-right:30px' data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-user"></i>&nbsp;<strong>{{current_user.username}}</strong> </a>
+            <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
+              <a class="dropdown-item" href="#"><i class="far fa-user"></i>&nbsp; My account</a>
+              <a class="dropdown-item" href="{{url_for('auth.logout')}}"><i class="fas fa-sign-out-alt"></i>&nbsp; Log out</a>
+            </div>
+            </li>
             {% else %}
-            <li style="color:white;padding:10px;text-decoration:none;margin-right:20px;"><a href="{{url_for('auth.login')}}"><i class="fas fa-user"> Log in</i></a></li>
+            <li class="nav-item">
+                <a style= 'margin-right:30px' class="nav-link" href="{{url_for('auth.login')}}"><i class="fas fa-sign-in-alt"></i>&nbsp; <strong>Log in</strong></a>
+            </li>
             {%endif%}
 
         </ul>
