--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -9,6 +9,12 @@
     {%else%}
     <p>No profile picture</p>
     {% endif %}
+    {% if user == current_user %}
+    <form  action="{{url_for('main.update_pic',name=user.username)}}" method="post" enctype = "multipart/form-data">
+      <input type="file"  name="photo" class="form-control" required>
+      <input type="submit">
+    </form>
+      {% endif %}
     <h3> {{user.username| capitalize}} </h3>
     {% if user.bio %}
       <p> {{user.bio}}</p>
