Categorize all posts based on their categories

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,36 @@
 {% extends 'base.html'%}
+{% import 'macros.html' as macro %}
 
 {% block content %}
-    <h2>welcome</h2>
-    <div class="container">
-        <div class="card-columns">
-            {% for j in pitches %}
-                <div class="card">
-                    <div class="card-header">{{j.title}}</div>
-                    <div class="card-body">{{j.post}}
-                        <p>{{j.time}}</p>
-                        <p>{{j.category}}</p>
-                    </div>
+    <h2 class="text-center" id="all">All Pitches</h2>
+        <div class="container">
+            <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#all">All Pitches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" href="#jobs">Job Pitches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" href="#event">Event Pitches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" href="#ads">Advert Pitches</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div  class="container tab-pane active" id="all"><br>
+                    {{ macro.display(pitches) }}
                 </div>
-            {%endfor%}
+                <div  class="container tab-pane fade" id="event"><br>
+                    {{ macro.display(event)}}
+                </div>
+                <div  class="container tab-pane fade" id="jobs"><br>
+                    {{ macro.display(job) }}
+                </div>
+                <div  class="container tab-pane fade" id="ads"><br>
+                    {{ macro.display(advertisement) }}
+                </div>
+            </div>
         </div>
-    </div>
 {% endblock%}
