--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -4,6 +4,9 @@
 {% block content %}
     <div class="container">
         <div class="row">
+            <div class="col-md-5">
+             
+            </div>
             {{wtf.quick_form(form)}}
         </div>
     </div>
