--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -4,8 +4,16 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="{{url_for('main.index')}}">All Pitches</a>
+                </li>
+            </ul>
         <ul class="navbar-nav ml-auto">
             {% if current_user.is_authenticated %}
+            <li class="nav-item">
+                <a href="{{url_for('main.new_pitch')}}">New Pitch</a>
+            </li>
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style= 'margin-right:30px' data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
