Display all comments for a specific post

--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -4,10 +4,16 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-md-5">
-             
+            
+            <div class="col-md-7">
+             {% for comment in all_comments %}
+                {{ comment.comment }}
+                {{comment.user.username}}
+             {% endfor %}
             </div>
-            {{wtf.quick_form(form)}}
+            <div class="col-md-5">
+                {{wtf.quick_form(form)}}
+            </div>
         </div>
     </div>
    
