--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -4,17 +4,33 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            
-            <div class="col-md-7">
-             {% for comment in all_comments %}
-                {{ comment.comment }}
-                {{comment.user.username}}
-             {% endfor %}
-            </div>
+
+            {% if all_comments %}
+                <div class="col-md-7">
+                    {% for comment in all_comments %}
+                       <div class="card w-90 mb-3">
+                           <div class="card-body">
+                            <h5>{{comment.pitch.title}}</h5>
+                             <p class="card-title">{{ comment.comment }}</p>
+                             <p class="card-text">--- {{comment.user.username}}</p>
+                           </div>
+                       </div>
+                    {% endfor %}
+                   </div>
+                   <div class="col-md-5">
+                       {{wtf.quick_form(form)}}
+                   </div>
+               </div>
+            {%else%}
+            <div class="card w-90 mb-3">
+                <div class="card-body">
+                  <p class="card-title">No Comments for this yet for this post. Be the first to comment</p>
+                </div>
+            </div> 
             <div class="col-md-5">
-                {{wtf.quick_form(form)}}
-            </div>
-        </div>
+                    {{wtf.quick_form(form)}}
+                </div>
+            {%endif%}
     </div>
    
 {% endblock%}
