--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -10,15 +10,21 @@
 			    		<h2>{{category.post}}</h2>
                         <footer class="blockquote-footer"> Posted by {{category.user.username}}</footer>
                         <footer class="blockquote-footer"> {{category.category}}</footer>
-			    	</blockquote>
+					</blockquote>
 			    	<a href="{{url_for('main.comment',pitch_id = category.id)}}" class="btn btn-info btn-sm"> Comment</a>
-			    </div>
+				</div>
             </div>
             <hr>
         </div>
         
 		{% endfor %}
 	{% else %}
+	<div class="card w-90 mb-3">
+		<div class="card-body">
+	
+			<p class="card-title">Category Has 0 posts</p>
+		</div>
+	</div>
 	{% endif %}
 </div>
 {% endmacro %}
