--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,18 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Piches</title>
     {% block styles %}
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
     {% endblock %}
 </head>
 
-<body>
-{% block navbar %}
-{% include "navbar.html" %}
-{% endblock %}
-{% block content %}
-{% endblock %}
+
+<body style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/pitch-world/master/app/static/photos/download.jpeg')">
+<div class="overlay">
+        {% block navbar %}
+        {% include "navbar.html" %}
+        {% endblock %}
+        {% block content %}
+        {% endblock %}
+</div>
 {% block scripts %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
