--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 
-<body style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/pitch-world/master/app/static/photos/download.jpeg')">
+<body class="body" style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/pitch-world/master/app/static/photos/down.jpeg')">
 <div class="overlay">
         {% block navbar %}
         {% include "navbar.html" %}
