--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,11 @@
 {% import 'macros.html' as macro %}
 
 {% block content %}
-    <h2 class="text-center" id="all">All Pitches</h2>
+    <h2 class="text-center" id="posts">All Pitches</h2>
         <div class="container">
             <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#all">All Pitches</a>
+                <li class="nav-item" >
+                    <a id ="cats" class="nav-link" data-toggle="tab" href="#all"><strong>All Pitches</strong> </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="tab" href="#jobs">Job Pitches</a>
@@ -30,6 +30,7 @@
                 </div>
                 <div  class="container tab-pane fade" id="ads"><br>
                     {{ macro.display(advertisement) }}
+                    
                 </div>
             </div>
         </div>
