--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,37 +1,35 @@
 {% macro display(piches) %}
-<div class="row">
-	{% if piches %}
-		{% for category in piches %}
-		<div class="col-md-4">
-			<div class="thumbnail text-center">
-			    <h5 class="card-header">{{category.title}}</h5>
-			    <div class="card-body">
-			    	<blockquote class="blockquote">
-			    		<h2>{{category.post}}</h2>
-                        <footer class="blockquote-footer"> Posted by: {{category.user.username}}</footer>
-                        <p class="text-center"> Category: {{category.category}}</p>
-					</blockquote>
-					<p><span style="border-radius:50%;">{{category.comment.count()}} Comments</span> 
-
-						<span> <a href="{{url_for('main.like',id = category.id)}}"><i class="fa fa-thumbs-up" style="font-size:18px;color: green"></i></a> {{category.upvote.count()}}</span>
-						&nbsp;
-						
-						<span><i class="fa fa-thumbs-down" style="color:red;"></i></span></p>
-
-			    	<a href="{{url_for('main.comment',pitch_id = category.id)}}" class="btn btn-info btn-sm"> Comment</a>
+<div class="container-fluid">
+		<div class="row">
+				{% if piches %}
+					{% for category in piches %}
+					<div class="col-md-4" >
+						<div class="thumbnail" id="carded">
+							<h5 class="card-header">{{category.title}}</h5>
+							<div class="card-body">
+									<p>{{category.post}}</p>
+									<p class="text-center"> Category: {{category.category}}</p>
+									<footer class="blockquote-footer text-center" > Posted by: {{category.user.username}}</footer>
+								<div><span class="foot" >{{category.comment.count()}} Comments</span> 
+									<span class="foot" > <a href="{{url_for('main.like',id = category.id)}}"><i class="fa fa-thumbs-up" style="font-size:18px;color: green"></i></a> {{category.upvote.count()}}</span>
+									&nbsp;
+									
+									<span class="foot"><i class="fa fa-thumbs-down" style="color:red;"></i></span></div>
+			
+								<a href="{{url_for('main.comment',pitch_id = category.id)}}" class="btn btn-info btn-sm"> Comment</a>
+							</div>
+						</div>
+					</div>
+					
+					{% endfor %}
+				{% else %}
+				<div class="card w-90 mb-3">
+					<div class="card-body">
+				
+						<p class="card-title">Category Has 0 posts</p>
+					</div>
 				</div>
-            </div>
-            <hr>
-        </div>
-        
-		{% endfor %}
-	{% else %}
-	<div class="card w-90 mb-3">
-		<div class="card-body">
-	
-			<p class="card-title">Category Has 0 posts</p>
-		</div>
-	</div>
-	{% endif %}
+				{% endif %}
+			</div>
 </div>
 {% endmacro %}
