--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,7 +4,7 @@
 <div class="container"> 
     <div class="row">
       <div class= "col-md-3"> </div>
-      <div class="col-md-6">
+      <div class="col-md-6" id="login">
       {% for message in get_flashed_messages() %}
         <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
