--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,6 +5,7 @@
     <div class="row">
       <div class= "col-md-3"> </div>
       <div class="col-md-6" id="login">
+          <h3 class="text-center"><i class="fas fa-sign-in-alt text-center"></i>&nbsp; <strong class="text-center" >Log In Here</strong></h3> 
       {% for message in get_flashed_messages() %}
         <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -12,7 +13,7 @@
         </div>
       {% endfor %}
       {{wtf.quick_form(loginform)}}
-      <p> Don't have an account? <a href="{{url_for('auth.signup')}}">Sign up here</a></p>
+      <p> Don't have an account? <a id="sign" href="{{url_for('auth.signup')}}">Sign up here</a></p>
      </div>
      <div clas="col-md-3"> </div>
     </div>
