--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -4,7 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-6"id="login">
+                <h3 class="text-center"><i class="fas fa-user-plus"></i></i>&nbsp; <strong>Sign Up</strong></h3>
                 {{ wtf.quick_form(r_form) }}
             </div>
             <div class="col-md-3"></div>
