--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -28,8 +28,11 @@
             </li>
             {% else %}
             <li class="nav-item">
-                <a style= 'margin-right:30px' class="nav-link" href="{{url_for('auth.login')}}"><i class="fas fa-sign-in-alt"></i>&nbsp; <strong>Log in</strong></a>
+                <a style= 'margin-right:30px' class="nav-link" href="{{url_for('auth.login')}}"><i class="fas fa-sign-in-alt"></i>&nbsp; <strong>Log In</strong></a>
             </li>
+            <li class="nav-item">
+                    <a style= 'margin-right:30px' class="nav-link" href="{{url_for('auth.signup')}}"><i class="fas fa-user-plus"></i></i>&nbsp; <strong>Sign Up</strong></a>
+                </li>
             {%endif%}
 
         </ul>
