--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -2,13 +2,14 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" id="allcomments" >
         <div class="row">
 
             {% if all_comments %}
-                <div class="col-md-7">
+                <div class="col-md-7" >
+                    <h3 class="text-center" id="coms">All comments for the post</h3>
                     {% for comment in all_comments %}
-                       <div class="card w-90 mb-3">
+                       <div class="card w-90 mb-3" >
                            <div class="card-body">
                             <h5>{{comment.pitch.title}}</h5>
                              <p class="card-title">{{ comment.comment }}</p>
@@ -17,8 +18,9 @@
                        </div>
                     {% endfor %}
                    </div>
-                   <div class="col-md-5">
-                       {{wtf.quick_form(form)}}
+                   <div class="col-md-5  commentform" >
+
+                        {{wtf.quick_form(form)}}
                    </div>
                </div>
             {%else%}
