--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,20 +2,21 @@
 {% import 'macros.html' as macro %}
 
 {% block content %}
-    <h2 class="text-center" id="posts">All Pitches</h2>
+    
         <div class="container">
+                <h2 class="text-center" id="posts">All Pitches</h2>
             <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
                 <li class="nav-item" >
                     <a id ="cats" class="nav-link" data-toggle="tab" href="#all"><strong>All Pitches</strong> </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#jobs">Job Pitches</a>
+                  <a class="nav-link" id ="cats" data-toggle="tab" href="#jobs">Job Pitches</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#event">Event Pitches</a>
+                  <a class="nav-link" id ="cats" data-toggle="tab" href="#event">Event Pitches</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#ads">Advert Pitches</a>
+                  <a class="nav-link" id ="cats"data-toggle="tab" href="#ads">Advert Pitches</a>
                 </li>
             </ul>
             <div class="tab-content">
