Display user posts in their profile

--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,17 +1,14 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<div class="container">
+<div class="container" >
 <div class="row">
   <div class="col-md-4">
     <div class="card testimonial-card">
         <div class="purple-gradient color-block mb-3"></div>
         <div class="avatar mx-auto white">
                 {% if user.profile_pic_path %}
-                <img src="{{url_for('static',filename=user.profile_pic_path)}}" class=" card-img-top img-thumbnail" alt="woman avatar" style="height: 380px">
-            
-                <!-- <img src="" alt="" class="img-thumbnail"> -->
-            
+                <img src="{{url_for('static',filename=user.profile_pic_path)}}" class=" card-img-top img-thumbnail" alt="woman avatar" style="height: 380px">            
                 {%else%}
                 <p>No profile picture</p>
             
@@ -31,27 +28,29 @@
         </div>
     </div>
   </div>
-
-
-
-    <div class="col-md-4">
-        <h3> </h3>
-        
-
+    <div class="col-md-4" id="user">
+        {% if current_user %}
+        <h3>You have {{user.pitches.count()}} Pitches</h3>
+        {% for i in posts%}
+        <div class="pitches">
+            <h5>Title: {{i.title}}</h5>
+            <h6>{{i.post}}</h6>
+        </div>
+         
+        {%endfor%}
+        {%else%}
+        <h3>You have ) posts</h3>
+        {%endif%}
 
   </div>
-  <div class="col-md-4">
-        <div class="col-md-4">
-
-            
-                    {% if user == current_user %}
+  <div class="col-md-4">            
+                {% if user == current_user %}
                 <form  action="{{url_for('main.update_pic',name=user.username)}}" method="post" enctype = "multipart/form-data">
             
                   <input type="file"  name="photo" class="form-control" required>
                   <input type="submit">
                 </form>
                   {% endif %}
-              </div>
              
   </div>
 </div>
