--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -57,3 +57,13 @@
     color: white;
     margin-top: 1%;
 }
+#user{
+    margin-top: 4%;
+    color: white;
+}
+.pitches{
+    background-color: azure;
+    color: black;
+    padding: 2%;
+    border-radius: 8px;
+}
