--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -66,4 +66,9 @@
     color: black;
     padding: 2%;
     border-radius: 8px;
+    margin-bottom: 1%;
+}
+.updateprofile{
+    margin-top: 5%;
+    color: white;
 }
