--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -35,6 +35,7 @@
         <div class="pitches">
             <h5>Title: {{i.title}}</h5>
             <h6>{{i.post}}</h6>
+            <p>{{i.comment.count()}} Comments</p>
         </div>
          
         {%endfor%}
