--- a/app/templates/profile/update.html
+++ b/app/templates/profile/update.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-3"></div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 updateprofile" >
             {{wtf.quick_form(form)}}
         </div>
         <div class="col-sm-3"></div>
