--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,25 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Piches</title>
     {% block styles %}
-
     <link href="https://fonts.googleapis.com/css?family=Arimo|Farro|Livvic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/css/mdb.min.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
     {% endblock %}
 </head>
 
 
-<body class="body" style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/pitch-world/master/app/static/photos/down.jpeg')">
-<div class="overlay">
+<body class="body" style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/pitch-world/master/app/static/photos/down.jpeg')" >
         {% block navbar %}
         {% include "navbar.html" %}
         {% endblock %}
         {% block content %}
         {% endblock %}
-</div>
 {% block scripts %}
+<script type="text/javascript" src="{{ url_for('static', filename='js/particles.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
+<script src="particles.js" type="text/javascript"></script>
+<script src="app.js" type="text/javascript"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
