--- a/app/templates/create_pitch.html
+++ b/app/templates/create_pitch.html
@@ -1,8 +1,10 @@
 {% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+
 {% block content %}
-    <div class="container">
+
+    <div class="container" id="particles-js">
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8" id="postform">
