--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<div class="container" >
+<div class="container" style="margin-top: 1%" id="particles-js">
 <div class="row">
   <div class="col-md-4">
     <div class="card testimonial-card">
@@ -46,10 +46,11 @@
   </div>
   <div class="col-md-4">            
                 {% if user == current_user %}
+                <h4 class="d-block mx-auto"style="color:white" >Update Your profile picture</h4>
                 <form  action="{{url_for('main.update_pic',name=user.username)}}" method="post" enctype = "multipart/form-data">
             
                   <input type="file"  name="photo" class="form-control" required>
-                  <input type="submit">
+                  <input type="submit" class="btn btn-sm btn-info">
                 </form>
                   {% endif %}
              
