--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,9 +5,9 @@
 {{super()}}
 <link rel="stylesheet" href="{{url_for('static',filename='css/particle.css')}}">
 {% endblock %}
-<div class="container" id="particle-js"> 
-    <div class="row">
-      <div class= "col-md-3"> </div>
+<div class="container"> 
+    <div class="row" id="particle-js">
+      <div class= "col-md-3"></div>
       <div class="col-md-6" id="login">
           <h3 class="text-center"><i class="fas fa-sign-in-alt text-center"></i>&nbsp; <strong class="text-center" >Log In Here</strong></h3> 
       {% for message in get_flashed_messages() %}
