--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,21 +1,23 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<div class="container" style="margin-top: 1%" id="particles-js">
+<div class="container" style="margin-top: 1%">
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 pict" >
+      
+
     <div class="card testimonial-card">
-        <div class="purple-gradient color-block mb-3"></div>
-        <div class="avatar mx-auto white">
+        <div class="card-img"  >
                 {% if user.profile_pic_path %}
-                <img src="{{url_for('static',filename=user.profile_pic_path)}}" class=" card-img-top img-thumbnail" alt="woman avatar" style="height: 380px">            
+                <img src="{{url_for('static',filename=user.profile_pic_path)}}" style="height:300px;border-radius: 1%" class="card-img"  alt="woman avatar">            
                 {%else%}
                 <p>No profile picture</p>
             
                 {% endif %}  
         </div>
+
         <div class="card-body">
-            <h4 class="card-title text-center"> {{user.username| capitalize}}</h4>
+            <h5 class="text-center"> {{user.username| capitalize}}</h5>
             <hr>
             {% if user.bio %}
                 <p><i class="fas fa-quote-left"></i> {{user.bio}}</p>
@@ -23,14 +25,27 @@
             <p> {{user.username| capitalize}} has no bio </p>
             {% endif %}
             {% if user == current_user %}
-            <a href="{{url_for('main.updateprofile',name=user.username)}}">Edit profile</a>
+            <div class="profpic">
+                <div id="updates">
+                  <a href="{{url_for('main.updateprofile',name=user.username)}}">Edit Bio</a>
+                  <button class="btn btn-sm btn-info" id="profbutton">update pic</button>
+                </div>
+                
+                <div id="imgform">
+                    <form  action="{{url_for('main.update_pic',name=user.username)}}" method="post" enctype = "multipart/form-data">
+                      <input type="file"  name="photo" class="form-control" required>
+                      <input type="submit" class="btn btn-sm btn-info" id="submit">
+                    </form>
+                </div>
+            </div>
             {% endif %}
         </div>
     </div>
   </div>
-    <div class="col-md-4" id="user">
+  <div class="col-md-1"></div>
+    <div class="col-md-5" id="user">
         {% if current_user %}
-        <h3>You have {{user.pitches.count()}} Pitches</h3>
+        <h3 class="text-center">You have {{user.pitches.count()}} Pitches</h3>
         {% for i in posts%}
         <div class="pitches">
             <h5>Title: {{i.title}}</h5>
@@ -43,17 +58,6 @@
         <h3>You have ) posts</h3>
         {%endif%}
 
-  </div>
-  <div class="col-md-4">            
-                {% if user == current_user %}
-                <h4 class="d-block mx-auto"style="color:white" >Update Your profile picture</h4>
-                <form  action="{{url_for('main.update_pic',name=user.username)}}" method="post" enctype = "multipart/form-data">
-            
-                  <input type="file"  name="photo" class="form-control" required>
-                  <input type="submit" class="btn btn-sm btn-info">
-                </form>
-                  {% endif %}
-             
   </div>
 </div>
 </div>
