--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -33,10 +33,11 @@
 }
 #postform{
     color: white;
-    margin-top: 5%;
+    margin-top: 3%;
     background-color: rgba(0, 0, 0, 0.456);
-    padding:4%;
+    padding:3%;
     border-radius: 8px;
+    z-index: 1;
 }
 #login{
     margin-top: 5%;
