--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -5,7 +5,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    padding: 0;
     height: 100%;
 }
 
@@ -80,10 +79,10 @@
     color: white;
 }
 #particles-js {
-    height: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
+    /* height: inherit; */
+    /* background-size: cover;
+    background-repeat: no-repeat; */
+    /* background-position: 50% 50%; */
 }
 #imgform{
     display: none;
