--- a/app/templates/create_pitch.html
+++ b/app/templates/create_pitch.html
@@ -4,8 +4,9 @@
 
 {% block content %}
 
-    <div class="container" id="particles-js"  >
+    <div  id="particles-js"  >  
             <div class=" row" >
+                    
                     <div class="col-md-2"></div>
                     <div class="col-md-8" id="postform">
                         <h2 class="text-center">Create Your Pitch Here!</h2>
