--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     
-        <div  class="container" id="particles-js">
+        <div  class="container">
                 <h2 class="text-center" id="posts">All Pitches</h2>
             <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
                 <li class="nav-item" >
