Create dislike button

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -80,8 +80,8 @@
 }
 #particles-js {
     /* height: inherit; */
-    /* background-size: cover;
-    background-repeat: no-repeat; */
+    background-size: cover;
+    /* background-repeat: no-repeat; */
     /* background-position: 50% 50%; */
 }
 #imgform{
